@@ -6,6 +6,7 @@
 #    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
 #    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.
 
+* savrus: Changed semantics of mount locking on secondary master. Update masters via snapshot.
 * lexolordan: To use force unmount user is required to have permission "administer" on cell_bundle. Update masters via snapshot.
 * shakurov: ACL validation semantics have changed for portal nodes. Update masters via snapshot.
 * ifsmirnov: Sync reshard semantics changed. Update masters via snapshot.
@@ -13,6 +14,8 @@
 * shakurov: Commit d674773a35 has changed (and fixed) serialization format of TSchedulerPool{Tree}::SpecifiedAttributes_. Update masters via snapshot.
 * shakurov: Commit c5503dc801 has changed semantics of setting/removing attributes. Update masters via snapshot.
 * savrus: Added some compatibility code for 19.4 clusters. Please use this version or later for updating a 19.4 cluster.
+* shakurov: Changed (and fixed) serialization format of TSchedulerPool{Tree}::SpecifiedAttributes_. Update masters via snapshot.
+* shakurov: Changed semantics of setting/removing attributes. Update masters via snapshot.
 * ermolovd: Introduce new logical type. Update masters via snapshot.
 * ermolovd: Disabled complex types for dynamic tables. Update masters via snapshot.
 * renadeen: Added filtering of jobs by job_competition_id. Feel free to update masters without snapshots but update operation archive to version 32.
